# res

./: CMakeLists.txt  README.md  res.sln  vs2017.bat
img/: bmp.cpp  file_data.cpp  file_data.h  image.cpp  image.h  img.vcxproj  img.vcxproj.filters  img_data.cpp  img_data.h  inner_include.h  png.cpp  tga.cpp
img/impl/: bmp.cpp  file_data.cpp  img_data.cpp  png.cpp  tga.cpp
win32_test/: test.cpp  test.tga  test_alpha.tga  win32_test.vcxproj  win32_test.vcxproj.filters  winmain.cpp
